<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessFalseActivity">


    <Button
        android:id="@+id/button_next"
        android:layout_width="304dp"
        android:layout_height="75dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:backgroundTint="@color/bg_button"
        android:onClick="getBack"

        android:shadowColor="@color/bg_button"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <Button
        android:id="@+id/button_tryAgain"
        android:layout_width="304dp"
        android:layout_height="75dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:backgroundTint="@color/bg_button"
        android:onClick="tryAgain"
        android:shadowColor="@color/bg_button"
        android:text="@string/again"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="445dp"
        android:layout_height="87dp"
        android:background="@color/redm"
        android:hapticFeedbackEnabled="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewGuessTheAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <ImageView
        android:id="@+id/imageViewCat"
        android:layout_width="265dp"
        android:layout_height="248dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/guess_two" />

    <TextView
        android:id="@+id/textViewEHWr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCat"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textViewThat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thatI"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEHWr"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/textViewThat"
        app:layout_constraintTop_toBottomOf="@+id/textViewEHWr"
        app:layout_constraintVertical_bias="0.039" />

</androidx.constraintlayout.widget.ConstraintLayout>